--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"scripts":{"test":"jest"},"dependencies":{"express":"^4.18.2","jest":"^29.5.0","joi":"^17.9.1","mongodb":"^5.1.0","supertest":"^6.3.3"}}
+{"scripts":{"test":"jest"},"dependencies":{"dotenv":"^16.0.3","express":"^4.18.2","jest":"^29.5.0","joi":"^17.9.1","mongodb":"^5.1.0","supertest":"^6.3.3"}}
